--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">react-native-fetch-blob</string>
+    <string name="app_name">react-native-blob-fetch</string>
 </resources>
